--- a/Desktop/vector_calculator_desktop/pubspec.yaml
+++ b/Desktop/vector_calculator_desktop/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_widget_from_html: ^0.15.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  html: ^0.15.5
 
 dev_dependencies:
   flutter_test:
