--- a/Desktop/vector_calculator_desktop/pubspec.yaml
+++ b/Desktop/vector_calculator_desktop/pubspec.yaml
@@ -30,13 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_widget_from_html: ^0.15.3
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   html: ^0.15.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
